--- a/329_proj.ipynb
+++ b/329_proj.ipynb
@@ -55,8 +55,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "brief text about section"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataframe shape:\n",
+      " (768, 9) \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Dataframe shape:\\n', df.shape, '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +103,23 @@
       "2                     0.672   32        1  \n",
       "3                     0.167   21        0  \n",
       "4                     2.288   33        1   \n",
-      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Dataframe head:\\n', df.head(), '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Dataframe tail:\n",
       "      Pregnancies  Glucose  BloodPressure  SkinThickness  Insulin   BMI  \\\n",
       "763           10      101             76             48      180  32.9   \n",
@@ -92,8 +134,24 @@
       "765                     0.245   30        0  \n",
       "766                     0.349   47        1  \n",
       "767                     0.315   23        0   \n",
-      "\n",
-      "Data column summary statistics:\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Dataframe tail:\\n', df.tail(), '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Summary statistics for each feature:\n",
       "        Pregnancies     Glucose  BloodPressure  SkinThickness     Insulin  \\\n",
       "count   768.000000  768.000000     768.000000     768.000000  768.000000   \n",
       "mean      3.845052  120.894531      69.105469      20.536458   79.799479   \n",
@@ -117,27 +175,29 @@
     }
    ],
    "source": [
-    "print('Dataframe head:\\n', df.head(), '\\n')\n",
-    "print('Dataframe tail:\\n', df.tail(), '\\n')\n",
-    "print('Data column summary statistics:\\n', df.describe())"
+    "print('Summary statistics for each feature:\\n', df.describe())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualize Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "brief text about section. boxplots, histograms, violin plots(?)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('')"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
