performed data preprocessing by dropping 'histogram' columns

--- a/329_proj.ipynb
+++ b/329_proj.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#drop hist features since they seem useless\n",
+    "columns_to_drop = [column for column in df.columns if 'histogram' in column.lower()]\n",
+    "cleaned_df = df.drop(columns=columns_to_drop)\n",
+    "\n",
+    "# Display the first few rows of the dataframe to verify the columns have been dropped\n",
+    "cleaned_df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -260,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -820,24 +827,24 @@
        " [22 rows x 22 columns])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 1. Statistical Summary\n",
-    "statistical_summary = df.describe()\n",
+    "statistical_summary = cleaned_df.describe()\n",
     "\n",
     "# 2. Correlation Analysis\n",
-    "correlation_matrix = df.corr()\n",
+    "correlation_matrix = cleaned_df.corr()\n",
     "\n",
     "(statistical_summary, correlation_matrix)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -853,14 +860,14 @@
    ],
    "source": [
     "# Histograms for all features\n",
-    "df.hist(figsize=(10, 8))\n",
+    "cleaned_df.hist(figsize=(10, 8))\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -876,14 +883,14 @@
    ],
    "source": [
     "# Box plots for all features\n",
-    "df.plot(kind='box', subplots=True, layout=(5,5), figsize=(15, 15))\n",
+    "cleaned_df.plot(kind='box', subplots=True, layout=(5,5), figsize=(15, 15))\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -900,20 +907,16 @@
    "source": [
     "# Correlation heatmap\n",
     "plt.figure(figsize=(10, 8))\n",
-    "sns.heatmap(df.corr(), annot=True, fmt=\".2f\")\n",
+    "sns.heatmap(cleaned_df.corr(), annot=True, fmt=\".2f\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Pair plot (scatter plot matrix) of all features colored by 'Outcome'\n",
-    "sns.pairplot(df, hue='fetal_health')\n",
-    "plt.show()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
