--- a/329_proj.ipynb
+++ b/329_proj.ipynb
@@ -4,12 +4,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "George Mathew (ggm596)\n",
+    "\n",
+    "Jack Yeung (jay697)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Project Definition\n",
+    "We are using the fetal health classification dataset from Kaggle (https://www.kaggle.com/datasets/andrewmvd/fetal-health-classification). This dataset provides information regarding fetal health following birth, including several biometric markers for the baby and the mother. \n",
+    "\n",
+    "This dataset has slightly over 2000 observations and will be limited to a randomly sampled 2000 observations of the original dataset using a random seed generator to make results replicable.\n",
+    "\n",
+    "This project aims to use these biomarkers to determine the most influential identifiers in predicting post-natal fetal health. Since the provided data targets are formatted according to 3 classes (as described later), this project will use multiclass classification methods to answer this question.\n",
+    "\n",
+    "Given the initial feature set, we expect severe_decelerations, fetal_movement, and abnormal_short_term_viability to be the three most significant predictors of fetal health. Severe decelerations would indicate that there is not enough bloodflow to the child, low fetal_movement could indicate an unresponsive case, and abnormal short term viability could indicate insufficient cardiovascular system control. All of these could be fatal and we expect them to be strongly negatively correlated with fetal health.\n",
+    "\n",
+    "Evaluation of our classification models will be performed using the standard metrics learned in class in combination with other accuracy metrics used commonly in the industry. For example, ROC curve analysis will be performed to compare model performance and evaluate the accuracy of the chosen model's classifications. The final results will be analyzed using our team's domain knowledge to ensure the results align with what we expected. If results differ, they will be logically compared to our expectations to determine the validity of our results and if changes need to be made."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Import Dependencies and Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +43,7 @@
      "text": [
       "/Users/georgemathew/anaconda3/lib/python3.10/site-packages/pandas/core/arrays/masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.5' currently installed).\n",
       "  from pandas.core import (\n",
-      "/var/folders/z6/d0zj0b9s1lv9vyh5km30751h0000gn/T/ipykernel_54864/3687150139.py:2: DeprecationWarning: \n",
+      "/var/folders/z6/d0zj0b9s1lv9vyh5km30751h0000gn/T/ipykernel_56352/3687150139.py:2: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -44,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +89,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset shape before limiting observation size to 2000: (2126, 22)\n",
+      "Dataset shape after limiting observation size to 2000: (2000, 22)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Dataset shape before limiting observation size to 2000: {df.shape}')\n",
+    "df = df[:2000]\n",
+    "print(f'Dataset shape after limiting observation size to 2000: {df.shape}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['baseline value', 'accelerations', 'fetal_movement',\n",
+       "       'uterine_contractions', 'light_decelerations', 'severe_decelerations',\n",
+       "       'prolongued_decelerations', 'abnormal_short_term_variability',\n",
+       "       'mean_value_of_short_term_variability',\n",
+       "       'percentage_of_time_with_abnormal_long_term_variability',\n",
+       "       'mean_value_of_long_term_variability', 'histogram_width',\n",
+       "       'histogram_min', 'histogram_max', 'histogram_number_of_peaks',\n",
+       "       'histogram_number_of_zeroes', 'histogram_mode', 'histogram_mean',\n",
+       "       'histogram_median', 'histogram_variance', 'histogram_tendency',\n",
+       "       'fetal_health'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +365,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +602,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +932,7 @@
        "[8 rows x 22 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1151,7 @@
        "4                                 19.9           1.0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1104,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1394,7 @@
        "max                              50.700000      3.000000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1332,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1355,7 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1378,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1433,7 +1508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1448,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1459,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1496,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1548,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1559,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1602,7 +1677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1705,7 +1780,7 @@
        "5                                severe_decelerations    0.005398"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1722,7 +1797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
