--- a/329_proj.ipynb
+++ b/329_proj.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## CS 329E Data Analytics Spring 2024 Final Project\n",
+    "\n",
     "George Mathew (ggm596)\n",
     "\n",
     "Jack Yeung (jay697)"
