--- a/329_proj.ipynb
+++ b/329_proj.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "George Mathew (ggm596)\n",
     "\n",
-    "Jack Yeung (jay697)"
+    "Jack Yeung (jay697)\n",
+    "\n",
+    "Project GitHub Repo: https://github.com/georgegmathew12/329e_project"
    ]
   },
   {
