--- a/329_proj.ipynb
+++ b/329_proj.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "## CS 329E Data Analytics Spring 2024 Final Project\n",
     "\n",
-    "George Mathew (ggm596)\n",
+    "George Mathew\n",
     "\n",
-    "Jack Yeung (jay697)\n",
+    "Jack Yeung\n",
     "\n",
     "Project GitHub Repo: https://github.com/georgegmathew12/329e_project"
    ]
